# llama.cpp

common/: arg.cpp  common.cpp
ggml/include/: ggml-backend.h
ggml/src/: ggml-backend.cpp
ggml/src/ggml-cuda/: allreduce.cu
include/: llama.h
src/: llama-context.cpp  llama-cparams.h  llama-graph.cpp
tools/: CMakeLists.txt
tools/qwen3vl-moe-bench/: CMakeLists.txt  README.md  plot_qwen3vl_moe_bench.py  qwen3vl-moe-bench.cpp
